<resources>
    <string name="app_name">GroceryApp</string>
    <string name="email">Email</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="signup">Signup</string>
    <string name="forgot_password"><u>Forgot Password?</u></string>
    <string name="forgot_password1"><u>Forgot Password</u></string>
    <string name="add_your_location">Add Your Location</string>
    <string name="set_your_location">Set Your Location</string>
    <string name="use_current_location"><u>Use Current Location</u></string>
    <string name="add_address">Add Address</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_for_an_item_in_spring_home">Search for an item in Spring Home</string>
    <string name="remove">Remove</string>
    <string name="re_order">Re-order</string>
    <string name="personal_details">Personal Details</string>
    <string name="address_book">Address Book</string>
    <string name="product_reviews">Product Reviews</string>
    <string name="chat">Chat</string>
    <string name="acount_settings">Acount Settings</string>
    <string name="logout">Logout</string>
    <string name="delivery_time_might_be_higher_than_usal_due_to_high_demand_in_your_area">Delivery time might be higher than usal due to high demand in your area.</string>
    <string name="offers">Offers</string>
    <string name="best_selling">Best Selling</string>
    <string name="home">Home</string>
    <string name="shop_by_department">Shop by Department</string>
    <string name="daily_deals">Daily Deals</string>

    <string name="orders">Orders</string>
    <string name="cart">Cart</string>
    <string name="my_lists">My Lists</string>
    <string name="my_account">My Account</string>
    <string name="help">Help</string>
    <string name="settings">Settings</string>
    <string name="order">Order</string>
    <string name="returns">Returns</string>
    <string name="credit_and_refunds">Credit and Refunds</string>
    <string name="redeem_gift_voucher">Redeem Gift Voucher</string>
    <string name="notification">Notification</string>
    <string name="received_someone_else_s_order">Received someone else’s order</string>
    <string name="item_quality_issues">Item quality issues</string>
    <string name="received_someone_else_s_order1">Received Someone Else’s Order</string>
    <string name="chat_with_agent">Chat with AGENT</string>
    <string name="please_chat_with_one_of_our_agents_so_we_can_look_further_into_this_issue">Please chat with one of our agents so we can look further into this issue.</string>
    <string name="item_quality_issues1">Item Quality Issues</string>
    <string name="missing_or_incorrect_items1">Missing Or Incorrect Items</string>
    <string name="order_arrived_late">Order Arrived Late</string>
    <string name="thank_you_for_submitting_the_issue_we_will_be_initiating_an_investigation_on_all_of_your_recent_frequent_order_issues_we_are_sorry_for_any_frustration_but_due_to_the_irregularity_this_the_most_we_can_afford_to_do_at_this_time">Thank you for submitting the issue. We will be initiating an investigation on all of your recent frequent order issues. We are sorry for any frustration, but due to the irregularity this the most we can afford to do at this time.</string>
    <string name="it_s_something_else">It’s something else</string>
    <string name="deliverer_issue">Deliverer issue</string>
    <string name="promotion_didn_t_work">Promotion didn’t work</string>
    <string name="feedback_about_the_app">Feedback about the app</string>
    <string name="save_changes">Save Changes</string>
    <string name="edit">Edit</string>
    <string name="add_new_address">Add New Address</string>
    <string name="chat_details">Contact Support</string>
    <string name="save_new_password">Save</string>
    <string name="current_passowrd">Current Passowrd</string>
    <string name="change_password">Change Password</string>
    <string name="gift_vouchers">Gift Vouchers</string>
    <string name="use_code">Use Code : DIWALI10</string>
    <string name="next">Next</string>
    <string name="address">Address</string>
    <string name="add_voucher_code">ADD VOUCHER CODE</string>
    <string name="order_details">Order Details</string>
    <string name="save">Save</string>
    <string name="details">Details</string>
    <string name="submit_feedback">Submit feedback</string>
    <string name="problem_with_deliverer">Problem with Deliverer</string>
    <string name="deliver_address">Deliver Address</string>
    <string name="delivery_type">Delivery Type</string>
    <string name="payment">Payment</string>
    <string name="add_payment_method">ADD PAYMENT METHOD</string>
    <string name="placing_order">Placing Order</string>
    <string name="undo">Undo</string>
    <string name="order_status">Order Status</string>
    <string name="call">Call</string>
    <string name="shops_by_department">Shops by Department</string>
    <string name="enter_amount">Enter Voucher Code</string>
    <string name="add">Add</string>
    <string name="share_using">Share Using</string>
    <string name="groceries">Groceries</string>
    <string name="products_details">Products Details</string>
    <string name="please_wait">Please wait</string>
    <string name="msg_noInternet">No Internet</string>
    <string name="your_phone_number">Mobile</string>
    <string name="on_error">On Error</string>
    <string name="please_enter_old_pass">Please enter old password.</string>
    <string name="please_enter_confirm_password">Please enter confirm password.</string>
    <string name="password_mismatched">Please make sure your password match.</string>
    <string name="enter_new_password">Please enter new password.</string>
    <string name="old_password_mismatched">Wrong old password.</string>
    <string name="_1kg_price">1kg, Price</string>
    <string name="remove_address">Remove Address</string>
    <string name="continue1">Continue</string>
    <string name="search_products">Search Products</string>
    <string name="apply">Apply</string>
    <string name="enter_voucher_code">Enter Voucher code</string>
    <string name="delivery_time">Delivery Time</string>
    <string name="add_product_review">Add Product Review</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_and_condition">Terms and Condition</string>
    <string name="default_notification_channel_id">1</string>
    <string name="best_offers">Best Offers</string>
    <string name="see_all">See all</string>
    <string name="order_received">Order Received</string>
    <string name="order_accepted_by_admin">Order Accepted By Admin</string>
    <string name="processing">Processing</string>
    <string name="order_picked_by_driver">Order Picked By Driver</string>
    <string name="order_delivered">Order Delivered</string>
</resources>