<?xml version="1.0" encoding="utf-8"?>
<layout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".activities.ReceivedSomeoneElse">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_60sdp"
            android:background="@color/app_color"
            android:visibility="visible">

            <ImageView
                android:id="@+id/img_header"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_centerVertical="true"
                android:padding="@dimen/_2sdp"
                android:scaleType="centerInside"
                android:src="@drawable/ic_close"
                app:tint="@color/white" />

            <TextView
                android:id="@+id/tvtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:ems="10"
                android:fontFamily="@font/montserrat_bold"
                android:gravity="center"
                android:text="@string/it_s_something_else"
                android:textColor="@color/white"
                android:textSize="@dimen/_13sdp" />

        </androidx.appcompat.widget.Toolbar>

        <TextView
            android:id="@+id/tvDeliveryIssue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableRight="@drawable/ic_right"
            android:fontFamily="@font/montserrat_semibold"
            android:padding="@dimen/_15sdp"
            android:text="@string/deliverer_issue"
            android:textColor="@color/black"
            android:drawableTint="@color/app_color"
            android:textSize="@dimen/_13sdp" />

        <TextView
            android:id="@+id/tvPromotion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableRight="@drawable/ic_right"
            android:fontFamily="@font/montserrat_semibold"
            android:padding="@dimen/_15sdp"
            android:text="@string/promotion_didn_t_work"
            android:textColor="@color/black"
            android:drawableTint="@color/app_color"
            android:textSize="@dimen/_13sdp" />


        <TextView
            android:id="@+id/tvFeedback"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableRight="@drawable/ic_right"
            android:fontFamily="@font/montserrat_semibold"
            android:padding="@dimen/_15sdp"
            android:text="@string/feedback_about_the_app"
            android:textColor="@color/black"
            android:drawableTint="@color/app_color"
            android:textSize="@dimen/_13sdp" />

        <TextView
            android:id="@+id/tvContact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableRight="@drawable/ic_right"
            android:fontFamily="@font/montserrat_semibold"
            android:padding="@dimen/_15sdp"
            android:text="Contact support"
            android:textColor="@color/black"
            android:drawableTint="@color/app_color"
            android:textSize="@dimen/_13sdp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_bg"
            android:fontFamily="@font/montserrat_semibold"
            android:text="@string/chat_with_agent"
            android:layout_alignParentBottom="true"
            android:layout_margin="@dimen/_15sdp"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_12sdp" />

    </LinearLayout>
</layout>