<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
   >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/app_color"
        android:orientation="vertical"
        >

        <ImageView
            android:id="@+id/ivProfile"
            android:layout_width="@dimen/_80sdp"
            android:layout_height="@dimen/_80sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_20sdp"
            app:srcCompat="@drawable/ic_user" />

        <TextView
            android:id="@+id/tvName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_toRightOf="@+id/ivProfile"
            android:fontFamily="@font/montserrat_semibold"
            android:text="Mahir Jain"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="@dimen/_13sdp" />

    <TextView
        android:id="@+id/tvEmail"
        android:layout_toRightOf="@+id/ivProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:gravity="center"
        android:layout_below="@id/tvName"
        android:fontFamily="@font/montserrat_semibold"
        android:textColor="@color/white"
        android:textSize="@dimen/_12sdp"
        android:layout_marginBottom="@dimen/_15sdp"
        android:text="jainmahir@321gmail.com" />

    </LinearLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/_5sdp"
            >

            <TextView
                android:id="@+id/tvHome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/ivProfile"
                android:fontFamily="@font/montserrat_semibold"
                android:text="@string/home"
                android:padding="@dimen/_15sdp"
                android:textColor="@color/black"
                android:textSize="@dimen/_13sdp" />
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                android:background="#D9D9D9"/>

            <TextView
                android:id="@+id/tvShop"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/ivProfile"
                android:fontFamily="@font/montserrat_semibold"
                android:text="@string/shop_by_department"
                android:padding="@dimen/_15sdp"
                android:textColor="@color/black"
                android:textSize="@dimen/_13sdp" />
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                android:background="#D9D9D9"/>

            <TextView
                android:id="@+id/tvDaily"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/ivProfile"
                android:fontFamily="@font/montserrat_semibold"
                android:text="@string/daily_deals"
                android:padding="@dimen/_15sdp"
                android:textColor="@color/black"
                android:textSize="@dimen/_13sdp" />
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                android:background="#D9D9D9"/>

            <TextView
                android:id="@+id/tvGift"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/ivProfile"
                android:fontFamily="@font/montserrat_semibold"
                android:text="@string/gift_vouchers"
                android:padding="@dimen/_15sdp"
                android:textColor="@color/black"
                android:textSize="@dimen/_13sdp" />
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                android:background="#D9D9D9"/>

            <TextView
                android:id="@+id/tvOrders"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/ivProfile"
                android:fontFamily="@font/montserrat_semibold"
                android:text="@string/orders"
                android:padding="@dimen/_15sdp"
                android:textColor="@color/black"
                android:textSize="@dimen/_13sdp" />
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                android:background="#D9D9D9"/>

          <!--  <TextView
                android:id="@+id/tvCart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/ivProfile"
                android:fontFamily="@font/montserrat_semibold"
                android:text="@string/cart"
                android:padding="@dimen/_15sdp"
                android:textColor="@color/black"
                android:textSize="@dimen/_13sdp" />
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                android:background="#D9D9D9"/>


            <TextView
                android:id="@+id/tvMyList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/ivProfile"
                android:fontFamily="@font/montserrat_semibold"
                android:text="@string/my_lists"
                android:padding="@dimen/_15sdp"
                android:textColor="@color/black"
                android:textSize="@dimen/_13sdp" />
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                android:background="#D9D9D9"/>-->

            <TextView
                android:id="@+id/tvAccount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/ivProfile"
                android:fontFamily="@font/montserrat_semibold"
                android:text="@string/my_account"
                android:padding="@dimen/_15sdp"
                android:visibility="gone"
                android:textColor="@color/black"
                android:textSize="@dimen/_13sdp" />
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                android:visibility="gone"
                android:background="#D9D9D9"/>

            <TextView
                android:id="@+id/tvHelp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_semibold"
                android:text="@string/help"
                android:visibility="gone"
                android:padding="@dimen/_15sdp"
                android:textColor="@color/black"
                android:textSize="@dimen/_13sdp" />
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                android:visibility="gone"
                android:background="#D9D9D9"/>

            <TextView
                android:id="@+id/tvPp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_semibold"
                android:text="@string/privacy_policy"
                android:padding="@dimen/_15sdp"
                android:textColor="@color/black"
                android:textSize="@dimen/_13sdp" />
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                android:background="#D9D9D9"/>

            <TextView
                android:id="@+id/tvTerms"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_semibold"
                android:text="@string/terms_and_condition"
                android:padding="@dimen/_15sdp"
                android:textColor="@color/black"
                android:textSize="@dimen/_13sdp" />
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                android:background="#D9D9D9"/>

            <TextView
                android:id="@+id/tvSettings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/ivProfile"
                android:fontFamily="@font/montserrat_semibold"
                android:text="@string/settings"
                android:padding="@dimen/_15sdp"
                android:visibility="gone"
                android:textColor="@color/black"
                android:textSize="@dimen/_13sdp" />
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                android:visibility="gone"
                android:background="#D9D9D9"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_30sdp"
                android:layout_marginBottom="@dimen/_15sdp"
                android:layout_marginHorizontal="@dimen/_20sdp"
                android:background="@drawable/button_bg"
                android:fontFamily="@font/montserrat_semibold"
                android:text="@string/logout"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/_12sdp" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>