<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:context=".activities.AddLocationAct">

            <include layout="@layout/header_layout" android:id="@+id/header"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_40sdp"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/set_your_location"
                android:textColor="@color/black"
                android:layout_marginLeft="@dimen/_20sdp"
                android:textSize="@dimen/_18sdp" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_2sdp"
                android:layout_marginHorizontal="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_40sdp"
                android:layout_marginRight="@dimen/_2sdp"
                android:layout_marginBottom="@dimen/_2sdp"
                app:cardCornerRadius="@dimen/_8sdp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/_10sdp">

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <EditText
                            android:id="@+id/etLocation"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginLeft="@dimen/_8sdp"
                            android:background="@color/white"
                            android:editable="false"
                            android:focusable="false"
                            android:fontFamily="@font/montserrat_medium"
                            android:hint="@string/add_your_location"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_12sdp" />

                        <ImageView
                            android:layout_width="@dimen/_25sdp"
                            android:layout_height="@dimen/_25sdp"
                            android:layout_gravity="center_vertical"
                            android:src="@drawable/ic_loca" />
                    </androidx.appcompat.widget.LinearLayoutCompat>

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/forogtPass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_semibold"
                android:gravity="bottom"
                android:text="@string/remove_address"
                android:layout_marginTop="@dimen/_15sdp"
                android:textColor="@color/red"
                android:visibility="gone"
                android:textSize="@dimen/_12sdp"
                android:layout_marginLeft="@dimen/_20sdp"
                android:textStyle="normal" />

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnContinue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_20sdp"
            android:background="@drawable/button_bg"
            android:fontFamily="@font/montserrat_semibold"
            android:text="@string/continue1"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_12sdp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnAdd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_20sdp"
            android:background="@drawable/button_bg"
            android:fontFamily="@font/montserrat_semibold"
            android:text="@string/add_address"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:visibility="gone"
            android:textSize="@dimen/_12sdp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_20sdp"
            android:background="@drawable/button_bg"
            android:fontFamily="@font/montserrat_semibold"
            android:text="@string/edit"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:visibility="gone"
            android:textSize="@dimen/_12sdp" />

    </RelativeLayout>
</layout>