<?xml version="1.0" encoding="utf-8"?>
<layout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".activities.OrderArrievedLateAct">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_60sdp"
            android:background="@color/app_color"
            android:visibility="visible">

            <ImageView
                android:id="@+id/img_header"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_centerVertical="true"
                android:padding="@dimen/_2sdp"
                android:scaleType="centerInside"
                android:src="@drawable/ic_close"
                app:tint="@color/white" />

            <TextView
                android:id="@+id/tvtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:ems="10"
                android:fontFamily="@font/montserrat_bold"
                android:gravity="center"
                android:text="@string/order_arrived_late"
                android:textColor="@color/white"
                android:textSize="@dimen/_13sdp" />

        </androidx.appcompat.widget.Toolbar>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/toolbar"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_20sdp"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/thank_you_for_submitting_the_issue_we_will_be_initiating_an_investigation_on_all_of_your_recent_frequent_order_issues_we_are_sorry_for_any_frustration_but_due_to_the_irregularity_this_the_most_we_can_afford_to_do_at_this_time"
            android:textColor="@color/black"
            android:textSize="@dimen/_13sdp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_bg"
            android:fontFamily="@font/montserrat_semibold"
            android:text="@string/chat_with_agent"
            android:layout_alignParentBottom="true"
            android:layout_margin="@dimen/_15sdp"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_12sdp" />

    </RelativeLayout>
</layout>